--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -152,7 +152,7 @@ grid.raster(img)
 
 ## Databases and species selection
 
-The analyses detailed herein are based on 633 exploited marine transboundary species that account for 80% of the catch taken from the world’s EEZs between 2005 and 2014 [@PalaciosAbrantes:2020tv]. **We define a (transboundary) "stock" unit when a species was shared by a pair of neighboring EEZs [@PalaciosAbrantes:2020tv; @Teh:2015gd], resulting in a total of 9,132 transboundary stocks.** Using the transboundary species Atlantic cod (*Gadus morhua*) as an example and this study’s definition of transboundary stock, the United States and Canada share a stock of Atlantic cod, and Canada and Greenland share a separate stock of Atlantic cod, but the United States and Greenland do not as they do not have juxtaposing EEZs. We defined the boundaries of the world’s EEZs using the Sea Around Us spatial division (updated 1 July 2015; http://www.seaaroundus.org), noting that it subdivides the EEZs of 198 coastal states into 280 regions (Fig. \@ref(fig:toeFigureS5)) including island territories. We determined the intersections between polygons using the R package sf [@PackagesfSimpleF:2018vp]. Each EEZ was categorized by geopolitical region according to the United Nations (https://population.un.org/wpp/DefinitionOfRegions/) and biome [@Reygondeau:2019uh]. The habitat preference of each species was determined following FishBase (http://www.fishbase.org) for fish species and SeaLifeBase (http://www.fishbase.org) for invertebrates (Table \@ref(tab:toeTableS1)). For each stock and EEZ, we used Sea Around Us data to estimate catch and fishing revenue from fishing activities. We report both average catch and revenue for the last available decade (2005-2014) [@Zeller2016; @Tai2017; @Sumaila:2015uc].
+The analyses detailed herein are based on 633 exploited marine transboundary species that account for 80% of the catch taken from the world’s EEZs between 2005 and 2014 [@PalaciosAbrantes:2020tv]. **We define a (transboundary) "stock" unit when a species was shared by a pair of neighboring EEZs [@PalaciosAbrantes:2020tv; @Teh:2015gd], resulting in a total of 9,132 transboundary stocks.** Using the transboundary species Atlantic cod (*Gadus morhua*) as an example and this study’s definition of transboundary stock, the United States and Canada share a stock of Atlantic cod, and Canada and Greenland share a separate stock of Atlantic cod, but the United States and Greenland do not as they do not have juxtaposing EEZs. We defined the boundaries of the world’s EEZs using the Sea Around Us spatial division (updated 1 July 2015; http://www.seaaroundus.org), noting that it subdivides the EEZs of 198 coastal states into 280 regions (Fig. \@ref(fig:toeFigureS1)) including island territories. We determined the intersections between polygons using the R package sf [@PackagesfSimpleF:2018vp]. Each EEZ was categorized by geopolitical region according to the United Nations (https://population.un.org/wpp/DefinitionOfRegions/) and biome [@Reygondeau:2019uh]. The habitat preference of each species was determined following FishBase (http://www.fishbase.org) for fish species and SeaLifeBase (http://www.fishbase.org) for invertebrates (Table \@ref(tab:toeTableS1)). For each stock and EEZ, we used Sea Around Us data to estimate catch and fishing revenue from fishing activities. We report both average catch and revenue for the last available decade (2005-2014) [@Zeller2016; @Tai2017; @Sumaila:2015uc].
 
 ## Projecting species distributions under climate change
 
@@ -199,7 +199,7 @@ lon_{ts} = \mu (lon_{per})
 \end{equation}
 
 
-where $lat_{per}$ and $lon_{per}$ are the latitudes and longitudes of the grid cells holding the specified percentile ($per^{th}$) of the projected transboundary stock abundance. **Fish stocks are not evenly distributed across their entire range, thus we focus on areas where transboundary stocks are more abundant and fishing activities are more likely to take place. Thus, we estimated the centroid of a stock only including grid cells where the projected stock abundance within the neighboring EEZs sharing the stock was above the $95^{th}$ percentile.** A sensitivity analysis using a subset of species (n = 34) for all EEZs  to examine the effects of different thresholds (per = $20^{th}$, $50^{th}$ and $90^{th}$ percentile) on the calculated index value showed no apparent difference between percentiles (Fig. \@ref(fig:toeFigureS7)). The centroid of each EEZ was estimated using the st package in R (Fig. \@ref(fig:toeFigureS5)). For each ensemble member, neighboring EEZs and transboundary stock, we computed the distance between centroids (i.e., EEZ and stock) using the geosphere package in R assuming the Earth is a perfect sphere and ignoring geographic barriers;
+where $lat_{per}$ and $lon_{per}$ are the latitudes and longitudes of the grid cells holding the specified percentile ($per^{th}$) of the projected transboundary stock abundance. **Fish stocks are not evenly distributed across their entire range, thus we focus on areas where transboundary stocks are more abundant and fishing activities are more likely to take place. Thus, we estimated the centroid of a stock only including grid cells where the projected stock abundance within the neighboring EEZs sharing the stock was above the $95^{th}$ percentile.** A sensitivity analysis using a subset of species (n = 34) for all EEZs  to examine the effects of different thresholds (per = $20^{th}$, $50^{th}$ and $90^{th}$ percentile) on the calculated index value showed no apparent difference between percentiles (Fig. \@ref(fig:toeFigureS2)). The centroid of each EEZ was estimated using the st package in R (Fig. \@ref(fig:toeFigureS1)). For each ensemble member, neighboring EEZs and transboundary stock, we computed the distance between centroids (i.e., EEZ and stock) using the geosphere package in R assuming the Earth is a perfect sphere and ignoring geographic barriers;
 
 \begin{equation}
 \label{eq:five}
@@ -235,9 +235,9 @@ ToE = TSI_\mu[t']> tresh
 
 This way we define a shift in a stock’s shared distribution (i.e., time of emergence) as the first year the TSI “emerges” from historical internal variability (*tresh*). It assumes that, from a fisheries’ perspective, the first year a stock’s distribution shift from a 10-year average is sufficient to call for caution. Two different arbitrary values of *tresh* were used. A conservative value ($tresh = 2* TSI_\sigma$) representing a 95% probability that the index has emerged from historical variability and a more relaxed value ($tresh=TSI_\sigma$) for a 67% probability.
 
-Since the ToE method is sensitive to the noise estimate (i.e., historical natural variability), we conducted sensitivity analysis where we first calculated the average across the 10 ensemble members for each year between 1951 to 2005 and the calculating the standard deviation over 1950-2005. Under this method, the natural variability is slightly larger resulting in a latter overall time of emergence (average ToE = 2057 vs 2036 of the original method). However, this method projects 1,139 more emerging stocks than the original (5,258 stocks vs 4,119 of the original method). The minimum and maximum ToE remains the same, and the number of EEZs with emerging stocks slightly increases with the alternative method. Further research looking at different approaches of estimating the natural variability component could help reduce the uncertainty in the estimation of the time of emergence of transboundary stocks. 
+Since the ToE method is sensitive to the noise estimate (i.e., historical natural variability), we conducted sensitivity analysis where we first calculated the average across the 10 ensemble members for each year between 1951 to 2005 and the calculating the standard deviation over 1950-2005. Under this method, the natural variability is slightly larger resulting in a latter overall time of emergence (average ToE = 2057 vs 2036 of the original method). However, this method projects 1,139 more emerging stocks than the original (5,258 stocks vs 4,119 of the original method). The minimum and maximum ToE remains the same, and the number of EEZs with emerging stocks slightly increases with the alternative method. Further research looking at different approaches of estimating the natural variability component could help reduce the uncertainty in the estimation of the time of emergence of transboundary stocks.
 
-<!-- In this case, the global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27 years, a difference of about 7 years (Fig. \@ref(fig:toeFigureS8)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks (Figs. \@ref(fig:toeFigureS2) and \@ref(fig:toeFigureS8)). -->
+<!-- In this case, the global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27 years, a difference of about 7 years (Fig. \@ref(fig:toeFigureS8)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks (Figs. \@ref(fig:toeFigureS3) and \@ref(fig:toeFigureS8)). -->
 
 ## Quantifying the intensity of transboundary stocks’ range shift
 
@@ -261,7 +261,7 @@ We tested the results for normality (e.g., skewness, kurtosis) and performed two
 
 ## Identifying range shifts in the shared distribution of transboundary stocks {-}
 
-Our results suggest that 4,119 transboundary stocks will experience a range shift beyond historical variability by 2100 (hereafter referred to as ‘shifts’; Fig. \@ref(fig:toeFigure1)A), using a two s.d. threshold (i.e., representing a probability of 95% that the stock has shifted). This corresponds to 45% of the studied stocks (Fig. \@ref(fig:toeFigure1)C). Using a less conservative threshold (i.e., one s.d. representing a probability of 67% that the stock has shifted) **results in 18% (n = 5,745) more shifting stocks, that is, 63% of all studied stocks** (Figs. \@ref(fig:toeFigureS2) and \@ref(fig:toeFigureS8)). For both cases, the first shift is modelled to have occurred back in 2006. The average year of shift in the shared distribution of these stocks in all EEZs analyzed is projected to be between 2029 $\pm$ 27 years (one s.d. threshold) and 2036 $\pm$ 28 years (two s.d. threshold). Furthermore, between 81% and 83% of the world’s EEZs will experience at least one transboundary stock shift by 2100 with 77% to 80% of EEZs recording a distributional stock shift by the UN 2030 Agenda’s deadline (Fig. \@ref(fig:toeFigure1)C).
+Our results suggest that 4,119 transboundary stocks will experience a range shift beyond historical variability by 2100 (hereafter referred to as ‘shifts’; Fig. \@ref(fig:toeFigure1)A), using a two s.d. threshold (i.e., representing a probability of 95% that the stock has shifted). This corresponds to 45% of the studied stocks (Fig. \@ref(fig:toeFigure1)C). Using a less conservative threshold (i.e., one s.d. representing a probability of 67% that the stock has shifted) **results in 18% (n = 5,745) more shifting stocks, that is, 63% of all studied stocks** (Figs. \@ref(fig:toeFigureS3), \@ref(fig:toeFigureS4) and \@ref(fig:toeFigureS5)). For both cases, the first shift is modelled to have occurred back in 2006. The average year of shift in the shared distribution of these stocks in all EEZs analyzed is projected to be between 2029 $\pm$ 27 years (one s.d. threshold) and 2036 $\pm$ 28 years (two s.d. threshold). Furthermore, between 81% and 83% of the world’s EEZs will experience at least one transboundary stock shift by 2100 with 77% to 80% of EEZs recording a distributional stock shift by the UN 2030 Agenda’s deadline (Fig. \@ref(fig:toeFigure1)C).
 
 
 
@@ -272,7 +272,7 @@ grid.raster(img)
 
 ```
 
-The median year in which transboundary stocks experience a range shift varied significantly according to the species’ habitat association (Methods; Kruskal-Wallis, $X^2$ = 203.85, DF = 93, *p* < 0.001; using the 2 s.d.  threshold; Tables \@ref(tab:toeTableS1), \@ref(tab:toeTableS2) and Fig. \@ref(fig:toeFigureS1)) and EEZs' geographic regions (Methods; Kruskal-Wallis, $X^2$ = 242.11, DF = 93, *p* < 0.001; using the 2 s.d.  threshold; Table S3 and Fig. 2A). Overall, most tropical EEZs and stocks will see earlier shifts, with the EEZs of Latin America, the Caribbean and Polynesia experiencing shifts significantly earlier (*p* < 0.05; Tables \@ref(tab:toeTableS2) and \@ref(tab:toeTableS3) than almost any other region (Figs. \@ref(fig:toeFigure2)B, \@ref(fig:toeFigureS1) and \@ref(fig:toeFigureS2)). In contrast, EEZs and stocks located in temperate regions, like northern Europe and eastern Asia, are projected to experience much later range shifts. Stocks in a number of EEZs including Brazil and New Zealand’s EEZs are projected to experience no range shifts beyond natural variability by the end of this century (Fig. \@ref(fig:toeFigure2)A).
+The median year in which transboundary stocks experience a range shift varied significantly according to the species’ habitat association (Methods; Kruskal-Wallis, $X^2$ = 203.85, DF = 93, *p* < 0.001; using the 2 s.d.  threshold; Tables \@ref(tab:toeTableS1), \@ref(tab:toeTableS2) and Fig. \@ref(fig:toeFigureS6)) and EEZs' geographic regions (Methods; Kruskal-Wallis, $X^2$ = 242.11, DF = 93, *p* < 0.001; using the 2 s.d.  threshold; Table S3 and Fig. 2A). Overall, most tropical EEZs and stocks will see earlier shifts, with the EEZs of Latin America, the Caribbean and Polynesia experiencing shifts significantly earlier (*p* < 0.05; Tables \@ref(tab:toeTableS2) and \@ref(tab:toeTableS3) than almost any other region (Figs. \@ref(fig:toeFigure2)B, \@ref(fig:toeFigureS3) and \@ref(fig:toeFigureS4)). In contrast, EEZs and stocks located in temperate regions, like northern Europe and eastern Asia, are projected to experience much later range shifts. Stocks in a number of EEZs including Brazil and New Zealand’s EEZs are projected to experience no range shifts beyond natural variability by the end of this century (Fig. \@ref(fig:toeFigure2)A).
 
 <!-- ![toeFigure 2. Year of change in the shared distribution of 4,119 transboundary stocks. A) Land polygon shows the contribution of shifting stocks to the country’s total fishing revenue from transboundary stocks. Exclusive Economic Zone polygons represent average range shifts per EEZ. EEZs with no time of emergence between 2006 and 2100 are represented in aqua color. B) Year of shared distribution shifts by region according to United Nations sub-regions. Points represent the median year of range shift. Horizontal dashed line represents the 2030 Agenda. N = North, S = South, W = West and E = East. Ltn. Ame. and the Car. = Latin America and the Caribbean. Aus and New Z. = Australia and New Zealand](../Figures/Fig3.png) -->
 
@@ -302,11 +302,11 @@ grid.raster(img)
 
 ## Shifting intensity of transboundary stocks
 
-<!-- We based the transboundary index on a stock’s centroid defined as the average grid cells that contain the majority of a stock’s abundance (see Methods - Calculating an index of transboundary range shift). Results from the sensitivity analysis suggest that our method is robust to the abundance level (e.g., the top 95%) of the stock (Fig. \@ref(fig:toeFigureS3)). In addition, we set an arbitrary threshold of 2 s.d. (95% confidence) to determine the time of emergence of the transboundary index. Sensitivity tests to a lower threshold of 1 s.d. (for a 67% confidence) resulted in a global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27, a difference of about 7 years (Fig. \@ref(fig:toeFigureS4)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks. SENT TO METHODS!!!! -->
+<!-- We based the transboundary index on a stock’s centroid defined as the average grid cells that contain the majority of a stock’s abundance (see Methods - Calculating an index of transboundary range shift). Results from the sensitivity analysis suggest that our method is robust to the abundance level (e.g., the top 95%) of the stock (Fig. \@ref(fig:toeFigureS6)). In addition, we set an arbitrary threshold of 2 s.d. (95% confidence) to determine the time of emergence of the transboundary index. Sensitivity tests to a lower threshold of 1 s.d. (for a 67% confidence) resulted in a global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27, a difference of about 7 years (Fig. \@ref(fig:toeFigureS4)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks. SENT TO METHODS!!!! -->
 
-We estimated the intensity of the distributional shift of transboundary stocks in terms of changes in catch proportion by 2030 (2020-2040) and 2050 (2040-2060), relative to the recent past (1951-2005) (see Methods). Projections show that by 2030, 59% $\pm$ 17% of the yearly catch from transboundary stocks will change beyond the historic variability experienced within an EEZ’s (Fig. \@ref(fig:toeFigure4)A). Moreover, 85% (n = 239) of the world’s EEZs will have experienced changes in catch proportion of transboundary stocks by 2030. By mid-21st century, the number of EEZs with changing stocks, as well as the number of stocks experiencing changes in catch proportion and the magnitude of that change will increase (Figs. \@ref(fig:toeFigureS3) and \@ref(fig:toeFigureS4)). The direction and intensity of shifts in transboundary stocks are largely related to regional changes in biogeography and the geometry of EEZs (Fig. \@ref(fig:toeFigure4)A). Along the Atlantic and Pacific coasts of Northern and Southern America and the Atlantic coast of Southern Africa, shifts in stocks are expected to benefit poleward EEZs. However, shifts along the coasts of Pacific Central America and West Africa occur in an equatorial direction.
+We estimated the intensity of the distributional shift of transboundary stocks in terms of changes in catch proportion by 2030 (2020-2040) and 2050 (2040-2060), relative to the recent past (1951-2005) (see Methods). Projections show that by 2030, 59% $\pm$ 17% of the yearly catch from transboundary stocks will change beyond the historic variability experienced within an EEZ’s (Fig. \@ref(fig:toeFigure4)). Moreover, 85% (n = 239) of the world’s EEZs will have experienced changes in catch proportion of transboundary stocks by 2030. By mid-21st century, the number of EEZs with changing stocks, as well as the number of stocks experiencing changes in catch proportion and the magnitude of that change will increase (Figs. \@ref(fig:toeFigureS7) and \@ref(fig:toeFigureS8)). The direction and intensity of shifts in transboundary stocks are largely related to regional changes in biogeography and the geometry of EEZs (Fig. \@ref(fig:toeFigure4). Along the Atlantic and Pacific coasts of Northern and Southern America and the Atlantic coast of Southern Africa, shifts in stocks are expected to benefit poleward EEZs. However, shifts along the coasts of Pacific Central America and West Africa occur in an equatorial direction. Regions where EEZs are relatively small and have multiple borders (e.g., Caribbean or Northwestern Europe) are expected to have a particularly complex exchange of stock share ratio with no clear established pattern (Fig. \@ref(fig:toeFigureS9)).
 
-```{r toeFigure4, eval = T,  echo = F, fig.width=12, fig.height=10,fig.pos= "H", fig.cap =  "Changes in stock proportion of neighboring Exclusive Economic Zones by 2030 (2021-2040) relative to 1951-2005. Lines represent the average change in transboundary stock share ratio (Methods) with arrows going from EEZ with decreasing stock share (point) to those gaining shares (arrowhead). Land polygons represent the percentage of stocks that are projected to change their stock share ratio (i.e., over two standard deviations from the historical catch proportion) beyond the identified threat point with higher gains identified in warmer colors. Panel B highlights changes for the Caribbean and Northwestern Europe."}
+```{r toeFigure4, eval = T,  echo = F, fig.width=12, fig.height=10,fig.pos= "H", fig.cap =  "Changes in stock proportion of neighboring Exclusive Economic Zones by 2030 (2021-2040) relative to 1951-2005. Lines represent the average change in transboundary stock share ratio (Methods) with arrows going from EEZ with decreasing stock share (point) to those gaining shares (arrowhead). Land polygons represent the percentage of stocks that are projected to change their stock share ratio (i.e., over two standard deviations from the historical catch proportion) beyond the identified threat point with higher gains identified in warmer colors."}
 
 img <- readPNG("../Figures/Fig5.png")
 grid.raster(img)
@@ -315,7 +315,7 @@ grid.raster(img)
 
 <!-- ![Figure 1. Changes in stock share ratio below each country’s threat point by 2030 (2021-2040) relative to 1951-2005. Lines represent the average change in transboundary stock share ratio with arrows going from EEZ with decreasing stock share (point) to those gaining shares (arrowhead). Land polygons represent the percentage of stocks that are projected to change their stock share ratio beyond the identified threat point with higher gains identified in warmer colors (green to yellow). Panel B zooms into specific areas shown within the gray dashed line boundaries in A.](../Figures/Fig1.png) -->
 
-**Most EEZs are expected to see a relatively small number of stocks shifting their SSR (Fig. \@ref(fig:toeFigure4)A). On average, EEZs are expected to see changes in SSR on 16% $\pm$ 10 of transboundary stocks increasing to 20% $\pm$ 11 by mid of the $21^{st}$ century. However, this result masks large variation in changes across EEZs. By early century, the EEZs of French Guiana (54%), South Africa (59%), Falkland Island (61%), Brazil (75%) and Kerguelen Island, and Pitcairn (both 100%) are projected to see changes in SSR of over 50% in their transboundary stocks. On the other hand, some island territories such as Anguilla are projected to see changes in as low as 2% of their transboundary stocks.**
+**Most EEZs are expected to see a relatively small number of stocks shifting their SSR (Fig. \@ref(fig:toeFigure4)). On average, EEZs are expected to see changes in SSR on 16% $\pm$ 10 of transboundary stocks increasing to 20% $\pm$ 11 by mid of the $21^{st}$ century. However, this result masks large variation in changes across EEZs. By early century, the EEZs of French Guiana (54%), South Africa (59%), Falkland Island (61%), Brazil (75%) and Kerguelen Island, and Pitcairn (both 100%) are projected to see changes in SSR of over 50% in their transboundary stocks. On the other hand, some island territories such as Anguilla are projected to see changes in as low as 2% of their transboundary stocks.**
 
 **Shifts in the SSR of the top 5 most valuable transboundary stocks of each country are projected to be 61 $\pm$ 18% by 2030 and 72 $\pm$ 17% by 2050 in 83% of the world's EEZs (Figure SX). In some cases, the SSR of one EEZ is projected to increase more than double relative to their neighbors (e.g., from 10% to 30% SSR). Some of these EEZs include Guatemala gaining from Mexico in the Pacific, Cyprus from Greece and Turkey in the Mediterranean Sea, and Russia from Norway and Japan in the Barents Sea and Western Pacific, respectively**
 
